# textileKins

./: .gitignore  LICENSE  README.md  Sequence Diagram.drawio  change-requests.md  pyproject.toml  requirements.txt  test.py  test_models.py
UML Diagrams/: UML_Class Diagram.drawio
UML_diagrams/: UML_Class Diagram.drawio
adanowo-simulator/: test.py  test_models.py
adanowo-simulator/config/: main.yaml
adanowo-simulator/src/: env.py  experiment_tracker.py  gym_wrapper.py  model_interface.py  model_wrapper.py  reward.py  safety_wrapper.py
adanowo_simulator/: action_manager.py  calculation_adapter.py  config_checker.py  control_manager.py  disturbance_manager.py  environment.py  environment_factory.py  experiment_tracker.py  gym_wrapper.py  model_adapter.py  model_interface.py  objective_functions.py  objective_functions_augsburg.py  objective_manager.py  output_manager.py  output_manager_opcua.py  reward_functions.py  reward_manager.py  scenario_manager.py  test.py  test_models.py  transformations.py
adanowo_simulator/abstract_base_class/: control_manager.py  environment.py  model_adapter.py  model_interface.py  output_manager.py  python_script_model.py  (+2 more)
config/: augsburg.yaml  main.yaml  paper.yaml
dependent_variable_calculations/: lineSpeedCalculation.py  lineSpeedCalculation.yaml  massThroughputCalculation.py  massThroughputCalculation.yaml
examples/: example.py  example_CMA_ES.py  example_augsburg.py  example_paper.py
models/: areaWeightLane1Model.py  areaWeightLane1Model.yaml  cardWebUnevennessModel.pth  cardWebUnevennessModel.py  linePowerConsumptionModel.py  lineSpeedModel.py  min_area_weight.yaml  tensileStrengthCDModel.py  tensileStrengthMDModel.py  unevenness_card_web.yaml
output_models/: areaWeightLane1Model.py  areaWeightLane1Model.yaml  areaWeightLane2Model.py  areaWeightLane2Model.yaml  areaWeightLane3Model.py  areaWeightLane3Model.yaml  cardWebUnevennessModel.hdf5  cardWebUnevennessModel.py  cardWebUnevennessModel.yaml  linePowerConsumptionModel.hdf5  linePowerConsumptionModel.pth  linePowerConsumptionModel.py  linePowerConsumptionModel.yaml  lineSpeedModel.yaml  tensileStrengthCDModel.hdf5  tensileStrengthCDModel.py  tensileStrengthCDModel.yaml  tensileStrengthMDModel.hdf5  tensileStrengthMDModel.pth  tensileStrengthMDModel.py  tensileStrengthMDModel.yaml
reward_functions/: baseline_reward.py
secondary_control_calculations/: lineSpeedCalculation.py
secondary_control_models/: lineSpeedModel.py  lineSpeedModel.yaml
src/: config.yaml  test.py
tests/: test_environment.py  test_model_inputs.py
(+184 files in other folders)
