[tool.poetry]
name = "adanowo-simulator"
version = "0.1.0"
description = "Simulation environment for the project AdaNowo"
authors = ["Ruben Kins <ruben.kins@rwth-aachen.de>", "luis.kutschat@ita.rwth-achen.de",
    "amrita.raychaudhury@ita.rwth-aachen.de"]
[tool.poetry.dependencies]
python = ">=3.10.8,<3.11"
numpy = "^1.24.2"
PyYAML = "^6.0"
hydra-core = "^1.3.2"
wandb = "^0.13.10"
pandas = "^1.5.3"
scikit-learn = "1.2.0"
gymnasium = "^0.27.1"
dill = "^0.3.6"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
Kivy = "^2.1.0"
gpytorch = ">=1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
